# graphRAG

./: .env.example  .gitignore  Dockerfile  README.md  analisis_tecnico.md  api.py  ask_questions.py  config.py  docker-compose.hybrid.yml  eval_battery.py  graph_legal_utils.py  graph_rag_engine.py  graph_text_utils.py  hybrid_engine.py  normativa_sync.py  pyproject.toml  questions.txt  questions_modal_subset.txt  rag_engine.py  routing.py
